--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -72,7 +72,7 @@
         <p:dialog widgetVar="addManufacturer" header="添加厂商"
                   modal="true" showEffect="fade" hideEffect="explode">
             <h:form>
-                厂商名称：
+                <p:outputLabel for="newManufacturerName" value="厂商名称："/>
                 <p:inputText id="newManufacturerName"
                              value="#{seedWarehouse.newManufacturerName}"
                              style="margin-right: 5px;"/>
