--- a/seedqr/src/main/webapp/login.xhtml
+++ b/seedqr/src/main/webapp/login.xhtml
@@ -5,19 +5,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>种子二维码</title>
-        <style type="text/css">
-            body {
-                font-family: Microsoft YaHei !important;
-            }
-            .ui-widget, .ui-widget .ui-widget {
-                font-family: Microsoft YaHei !important;
-                font-size: 90% !important;
-            }
-            .transparent tr, .transparent td {
-                background: none !important;
-                border: none !important;
-            }
-        </style>
+        <h:outputStylesheet library="css" name="seedqr.css"/>
     </h:head>
     <h:body>
         <h:form prependId="false">
