--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -5,61 +5,44 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>种子二维码</title>
-        <style type="text/css">
-            body {
-                font-family: Microsoft YaHei !important;
-            }
-            .ui-widget, .ui-widget .ui-widget {
-                font-family: Microsoft YaHei !important;
-                font-size: 90% !important;
-            }
-            .transparent tr, .transparent td {
-                background: none !important;
-                border: none !important;
-            }
-        </style>
+        <h:outputStylesheet library="css" name="seedqr.css"/>
     </h:head>
     <h:body>
         <h:form prependId="false">
-            <p:panelGrid styleClass="transparent">
-                <p:row>
-                    <p:column>
-                        <p:outputLabel for="seedName" value="品种名称："/>
-                    </p:column>
-                    <p:column>
-                        <p:inputText id="seedName" value="#{qrGenerator.seedName}"/>
-                    </p:column>
-                    <p:column>
-                        <p:message id="seedNameError" for="seedName"/>
-                    </p:column>
-                </p:row>
-                <p:row>
-                    <p:column>
-                        <p:outputLabel for="manufacturer" value="生产经营者名称："/>
-                    </p:column>
-                    <p:column>
-                        <p:inputText id="manufacturer" value="#{qrGenerator.manufacturer}"/>
-                    </p:column>
-                    <p:column>
-                        <p:message id="manufacturerError" for="manufacturer"/>
-                    </p:column>
-                </p:row>
-                <p:row>
-                    <p:column>
-                        <p:outputLabel for="amount" value="包装数量（袋）："/>
-                    </p:column>
-                    <p:column>
-                        <p:spinner id="amount" min="1" max="99999999" size="8"
-                                   value="#{qrGenerator.amount}"/>
-                    </p:column>
-                </p:row>
-                <p:row>
-                    <p:column colspan="3">
-                        <p:commandButton value="生成并下载二维码压缩包" ajax="false"
-                                         validateClient="true"
-                                         action="#{qrGenerator.generateQrCodes}"/>
-                    </p:column>
-                </p:row>
+            <p:panelGrid columns="3" styleClass="transparent">
+                <p:column>
+                    <p:outputLabel for="seedName" value="品种名称："/>
+                </p:column>
+                <p:column>
+                    <p:inputText id="seedName" value="#{qrGenerator.seedName}"/>
+                </p:column>
+                <p:column>
+                    <p:message id="seedNameError" for="seedName"/>
+                </p:column>
+                <p:column>
+                    <p:outputLabel for="manufacturer" value="生产经营者名称："/>
+                </p:column>
+                <p:column>
+                    <p:inputText id="manufacturer" value="#{qrGenerator.manufacturer}"/>
+                </p:column>
+                <p:column>
+                    <p:message id="manufacturerError" for="manufacturer"/>
+                </p:column>
+                <p:column>
+                    <p:outputLabel for="amount" value="包装数量（袋）："/>
+                </p:column>
+                <p:column>
+                    <p:spinner id="amount" min="1" max="10000" size="5"
+                               value="#{qrGenerator.amount}"/>
+                </p:column>
+                <p:column>
+                    <p:message id="amountError" for="amount"/>
+                </p:column>
+                <f:facet name="footer">
+                    <p:commandButton value="生成并下载二维码压缩包" ajax="false"
+                                     validateClient="true"
+                                     action="#{qrGenerator.generateQrCodes}"/>
+                </f:facet>
             </p:panelGrid>
         </h:form>
     </h:body>
