change to normal
Signed-off-by: gzz727007 <gzz727007@163.com>

--- a/seedqr/src/main/webapp/query.xhtml
+++ b/seedqr/src/main/webapp/query.xhtml
@@ -8,7 +8,7 @@
         <h:outputStylesheet library="css" name="seedqr.css"/>
     </h:head>
     <h:body>
-        <h:panelGroup layout="block" style="margin: auto; width: 800px; height: 100%;background-color: gray">
+        <h:panelGroup layout="block" style="margin: auto; width: 800px; height: 100%;">
             <h:panelGroup layout="block" style="position: absolute; top: 0; width: 800px; height: 100px;">
                 <h1 style="text-align: left;">中国种子二维码追溯查询</h1>
             </h:panelGroup>
