--- a/seedqr/src/main/webapp/WEB-INF/gui/seed/info.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/seed/info.xhtml
@@ -87,7 +87,7 @@
                     </p:row>
                     <p:row>
                         <p:column colspan="4" style="text-align: right;">
-                            <p:commandButton value="添加属性" action="#{seedEditor.addSeedConfigs}"
+                            <p:commandButton value="添加属性" action="#{seedEditor.addSeedConfig}"
                                              process="@form" update="@form seedConfigTable"/>
                         </p:column>
                     </p:row>
