--- a/seedqr/src/main/webapp/WEB-INF/gui/seed/info.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/seed/info.xhtml
@@ -4,7 +4,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <ui:composition>
-        <h:form prependId="false">
+        <h:form>
             <p:panelGrid styleClass="transparent" style="margin-left: auto;">
                 <p:row>
                     <p:column>
@@ -59,15 +59,12 @@
                         </p:column>
                         <p:column>
                             <p:selectOneMenu id="newSeedConfigParaName" editable="true"
-                                             value="#{seedEditor.newSeedConfig.paraName}"
-                                             style="font-size: 90%;">
+                                             value="#{seedEditor.newSeedConfig.paraName}">
                                 <f:selectItems value="#{seedEditor.standardSeedConfigParaNames}"
                                                var="name" itemLabel="#{name}" itemValue="#{name}"/>
                                 <p:ajax process="@this" update="placeHolder"
                                         oncomplete="document.getElementById('newSeedConfigParaValue').placeholder = document.getElementById('placeHolder').innerHTML;"/>
                             </p:selectOneMenu>
-                            <p:message id="newSeedConfigParaNameError"
-                                       for="newSeedConfigParaName" display="tooltip"/>
                         </p:column>
                     </p:row>
                     <p:row>
@@ -81,8 +78,6 @@
                                              rows="5" maxlength="1000" style="width: 100%;"
                                              placeholder="#{seedEditor.seedConfigHint}"
                                              value="#{seedEditor.newSeedConfig.paraValue}"/>
-                            <p:message id="newSeedConfigParaValueError"
-                                       for="newSeedConfigParaValue" display="tooltip"/>
                         </p:column>
                     </p:row>
                     <p:row>
