--- a/seedqr/src/main/webapp/WEB-INF/gui/seed/warehouse.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/seed/warehouse.xhtml
@@ -4,22 +4,23 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <ui:composition>
-        <h:form>
+        <h:form target="download">
             <p:panelGrid columns="2" styleClass="transparent" style="margin: auto;">
                 <p:outputLabel for="seedName" value="品种名称："/>
-                <p:inputText id="seedName" value="#{qrGenerator.seedName}"/>
+                <p:inputText id="seedName" value="#{seedWarehouse.seedName}"/>
                 <p:outputLabel for="manufacturer" value="生产经营者名称："/>
-                <p:inputText id="manufacturer" value="#{qrGenerator.manufacturer}"/>
+                <p:inputText id="manufacturer" value="#{seedWarehouse.manufacturer}"/>
                 <p:outputLabel for="amount" value="包装数量（袋）："/>
                 <p:spinner id="amount" min="1" max="10000" size="5"
-                           value="#{qrGenerator.amount}"/>
+                           value="#{seedWarehouse.amount}"/>
                 <f:facet name="footer">
                     <h:panelGroup layout="block" style="width: 100%; text-align: right;">
                         <p:commandButton value="生成并下载二维码压缩包" ajax="false"
-                                         action="#{qrGenerator.generateQrCodes}"/>
+                                         action="#{seedWarehouse.generateQrCodes}"/>
                     </h:panelGroup>
                 </f:facet>
             </p:panelGrid>
         </h:form>
+        <iframe name="download" src="about:blank"/>
     </ui:composition>
 </html>
