--- a/seedqr/src/main/webapp/WEB-INF/gui/seed/scan.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/seed/scan.xhtml
@@ -1,8 +1,50 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <ui:composition>
+        <h:form prependId="false">
+            <p:panelGrid styleClass="transparent" style="margin: auto;">
+                <p:row>
+                    <p:column>
+                        <p:outputLabel for="bulkPackCode" value="大包条码："/>
+                    </p:column>
+                    <p:column>
+                        <p:inputText id="bulkPackCode" value="#{seedScanner.bulkPackCode}"/>
+                    </p:column>
+                </p:row>
+                <p:row>
+                    <p:column>
+                        <p:outputLabel for="smallPackCode" value="小包条码："/>
+                    </p:column>
+                    <p:column>
+                        <p:inputText id="smallPackCode" value="#{seedScanner.smallPackCode}"/>
+                    </p:column>
+                    <p:column>
+                        <p:commandButton value="添加" action="#{seedScanner.addSmallPackCode}"
+                                         process="smallPackCode @this" update="smallPackCodes"/>
+                    </p:column>
+                </p:row>
+                <p:row>
+                    <p:column/>
+                    <p:column colspan="2">
+                        <p:scrollPanel mode="native" style="height: 200px;">
+                            <p:dataList id="smallPackCodes" type="ordered"
+                                        value="#{seedScanner.smallPackCodes}"
+                                        var="smallPackCode">
+                                #{smallPackCode}
+                            </p:dataList>
+                        </p:scrollPanel>
+                    </p:column>
+                </p:row>
+                <p:row>
+                    <p:column colspan="3">
+                        <h:panelGroup layout="block" styleClass="fullRight">
+                            <p:commandButton value="绑定" action="#{seedScanner.bindCodes}"/>
+                        </h:panelGroup>
+                    </p:column>
+                </p:row>
+            </p:panelGrid>
+        </h:form>
     </ui:composition>
 </html>
