--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -40,8 +40,8 @@
                     <p:tab title="二维码生成">
                         <ui:include src="WEB-INF/gui/seed/qrGenerator.xhtml"/>
                     </p:tab>
-                    <p:tab title="批发商管理">
-                        <ui:include src="WEB-INF/gui/seed/wholesaler.xhtml"/>
+                    <p:tab title="批发管理">
+                        <ui:include src="WEB-INF/gui/seed/wholesale.xhtml"/>
                     </p:tab>
                 </p:tabView>
             </h:panelGroup>
