--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -43,6 +43,9 @@
                     <p:tab title="批发管理">
                         <ui:include src="WEB-INF/gui/seed/wholesale.xhtml"/>
                     </p:tab>
+                    <p:tab title="批发管理2">
+                        <ui:include src="WEB-INF/gui/seed/wholesale2.xhtml"/>
+                    </p:tab>
                 </p:tabView>
             </h:panelGroup>
             <h:panelGroup layout="block" style="text-align: center; position: absolute; bottom: 0; width: 800px; height: 50px;">
