--- a/seedqr/src/main/webapp/WEB-INF/gui/seed/qrGenerator.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/seed/qrGenerator.xhtml
@@ -1,20 +1,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
     <ui:composition>
         <h:form target="download">
             <p:panelGrid columns="2" styleClass="transparent" style="margin: auto;">
                 <p:outputLabel for="seedName" value="品种名称："/>
-                <p:inputText id="seedName" value="#{qrGenerator.seedName}"/>
+                <p:inputText id="seedName" maxlength="50" value="#{qrGenerator.seedName}"/>
                 <p:outputLabel for="manufacturer" value="生产经营者名称："/>
-                <p:inputText id="manufacturer" value="#{qrGenerator.manufacturer}"/>
+                <p:inputText id="manufacturer" maxlength="50" value="#{qrGenerator.manufacturer}"/>
                 <p:outputLabel for="amount" value="包装数量（袋）："/>
                 <p:spinner id="amount" min="1" max="10000" size="5"
                            value="#{qrGenerator.amount}"/>
                 <f:facet name="footer">
-                    <h:panelGroup layout="block" styleClass="fullRight">
+                    <h:panelGroup layout="block" styleClass="submit">
                         <p:commandButton value="生成并下载二维码压缩包"
                                          action="#{qrGenerator.generateQrCodes}"/>
                     </h:panelGroup>
