--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -37,6 +37,9 @@
                     <p:tab title="种子登记">
                         <ui:include src="WEB-INF/gui/seed/seedRegister.xhtml"/>
                     </p:tab>
+                    <p:tab title="批发商管理">
+                        <ui:include src="WEB-INF/gui/seed/wholesalers.xhtml"/>
+                    </p:tab>
                     <p:tab title="二维码生成">
                         <ui:include src="WEB-INF/gui/seed/qrGenerator.xhtml"/>
                     </p:tab>
