--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -7,6 +7,13 @@
     <h:head>
         <title>中国种子二维码追溯系统</title>
         <h:outputStylesheet library="css" name="seedqr.css"/>
+        <script type="text/javascript">
+            function tabShown(index) {
+                if (index === 2) {
+                    PrimeFaces.focus('packCode');
+                }
+            }
+        </script>
     </h:head>
     <h:body>
         <p:growl autoUpdate="true"/>
@@ -32,7 +39,8 @@
                 </h:form>
                 <p:tabView prependId="false" style="height: 95%;"
                            activeIndex="#{sessionData.tab}"
-                           rendered="#{request.isUserInRole('user')}">
+                           rendered="#{request.isUserInRole('user')}"
+                           onTabShow="tabShown(index);">
                     <p:ajax event="tabChange" listener="#{sessionData.tabChanged}"/>
                     <p:tab title="种子登记">
                         <ui:include src="WEB-INF/gui/seed/seedRegister.xhtml"/>
